Sun Feb 22 10:43:37 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_call_finalizer): control GC execution during
	  force firnalizations at the end of interpreter process.
	  [Bug #10768]

	  1) Prohibit incremental GC while running Ruby-level finalizers
	     to avoid any danger.
	  2) Prohibit GC while invoking T_DATA/T_FILE data structure
	     because these operations break object relations consistency.

	  This patch can introduce another memory consuming issue because
	  Ruby-level finalizers can run after (2), GC is disabled.
	  However, basically object consistency was broken at (2) as I
	  described above. So that running Ruby-level finalizers contains
	  danger originally. Because of this point, I need to suggest to
	  remove these 3 lines (invoking remaining finalizers). And add a
	  rule to add that finalizers should not add new finalizers, or
	  say there is no guarantee to invoke finalizers that added by
	  another finalizer.

Sun Feb 22 04:07:05 2015  Zachary Scott  <e@zzak.io>

        * ext/openssl/ossl_asn1.c: [DOC] RDoc formatting fixes for
          ASN1::ObjectId with patch from @vbatts [Fixes GH-834]

        * ext/openssl/ossl_bn.c: ditto.

Sat Feb 21 19:51:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (match_aref): RMatch::regexp is Qnil after matching by a
	  string since r45451.  [ruby-core:68209] [Bug #10877]

Sat Feb 21 16:18:42 2015  Stefan Schuler  <mail@stefanschuessler.de>

	* compar.c (Init_Comparable): [DOC] Replace camelcase variable name.
	  [Fix GH-833]

Fri Feb 20 17:27:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_identical_p): fix handle leak, ensure to close
	  the handle of the first argument.

Fri Feb 20 17:19:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (different_device_p): compare by volume serial
	  numbers, not by path names.  [ruby-core:68162] [Bug #10865]

Thu Feb 19 01:58:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
